# kubaryi

./: .gitignore  Cargo.toml  README.md  gamestate.c  gamestate.h  makefile
src/: main.rs  router.rs  socket.rs
static/: card.html  style.css
