[package]
name = "kubaryi"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-web = "3.2.0"
actix-web-actors = "3"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
tinytemplate = "1.1"
